*SVN*

* Worked around a Safari bug where it wouldn't pass headers through if the response was zero length by having render :nothing return ' ' instead of ''

* Fixed Request#subdomains to handle "foo.foo.com" correctly


*1.9.1* (11 July, 2005)

* Fixed that auto_complete_for didn't force the input string to lower case even as the db comparison was

* Fixed that Action View should always use the included Builder, never attempt to require the gem, to ensure compatibility

* Added that nil options are not included in tags, so tag("p", :ignore => nil) now returns <p /> not <p ignore="" />  but that tag("p", :ignore => "") still includes it #1465 [michael@schuerig.de]

* Fixed that UrlHelper#link_to_unless/link_to_if used html_escape on the name if no link was to be applied. This is unnecessary and breaks its use with images #1649 [joergd@pobox.com]

* Improved error message for DoubleRenderError

* Fixed routing to allow for testing of *path components #1650 [Nicholas Seckar]

* Added :handle as an option to sortable_element to restrict the drag handle to a given class #1642 [thejohnny]

* Added a bunch of script.aculo.us features #1644, #1677, #1695 [Thomas Fuchs]
  * Effect.ScrollTo, to smoothly scroll the page to an element
  * Better Firefox flickering handling on SlideUp/SlideDown
  * Removed a possible memory leak in IE with draggables
  * Added support for cancelling dragging my hitting ESC
  * Added capability to remove draggables/droppables and redeclare sortables in dragdrop.js (this makes it possible to call sortable_element on the same element more than once, e.g. in AJAX returns that modify the sortable element. all current sortable 'stuff' on the element will be discarded and the sortable will be rebuilt)